# advanced_flask_rest

./: config.py  pyproject.toml
app/: app.py
app/databases/: development.db
app/resources/: item.py  user.py
commands/: setup.py
